appl.proper file edit